--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<script>alert=('u havebeen hacked')</scipt>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecting...</title>
+    <script type="text/javascript">
+        // Function to redirect to Google
+        function redirectToGoogle() {
+            window.location.href = "https://www.google.com";
+        }
+
+        // Call the redirect function after the page loads
+        window.onload = redirectToGoogle;
+    </script>
+</head>
+<body>
+    <p>If you are not redirected automatically, <a href="https://www.google.com">click here</a>.</p>
+</body>
+</html>
