--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
         // Function to redirect to Google
         function redirectToGoogle() {
-            window.location.href = "https://www.google.com";
+            window.location.href = "bing.com";
         }
 
         // Call the redirect function after the page loads
