--- a/index.html
+++ b/index.html
@@ -3,18 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=https://www.google.com">
     <title>Redirecting...</title>
-    <script type="text/javascript">
-        // Function to redirect to Google
-        function redirectToGoogle() {
-            window.location.href = "bing.com";
-        }
-
-        // Call the redirect function after the page loads
-        window.onload = redirectToGoogle;
-    </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://www.google.com">click here</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="https://www.google.com">link to Google</a>.</p>
 </body>
 </html>
